[css-grid] Fix percentages in relative offsets for grid items

The method LayoutBoxModelObject::RelativePositionOffset()
was not considering the case of grid items,
where the containing block is the grid area.
The patch modifies the method so the new code uses
OverrideContainingBlockContentLogicalWidth|Height when required.

Two new tests are added, the first one does not use percentages
and is already passing. The second one has the very same output
but using percentages which was not working before this patch.

BUG=835607
TEST=external/wpt/css/css-grid/grid-items/grid-items-relative-offsets-001.html
TEST=external/wpt/css/css-grid/grid-items/grid-items-relative-offsets-002.html

Change-Id: Icb76f4a521566ad36f87924835b21ae450f2cb24
Reviewed-on: https://chromium-review.googlesource.com/c/1238726
Reviewed-by: Javier Fernandez <jfernandez@igalia.com>
Commit-Queue: Manuel Rego <rego@igalia.com>
Cr-Commit-Position: refs/heads/master@{#597543}
Former-commit-id: 6298f794c7a71b2bd3f3efe137add7ceac5ae38d